ページに戻る機能追加

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     />
   </head>
   <body>
+    <!-- 戻るボタン (iframeで表示されている場合のみ表示) -->
+    <button id="backButton" class="back-button" style="display: none">
+      <i class="fas fa-arrow-left"></i>
+      元のページに戻る
+    </button>
+
     <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
