戻るボタン修正

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
   </head>
   <body>
-    <!-- 戻るボタン (iframeで表示されている場合のみ表示) -->
-    <button id="backButton" class="back-button" style="display: none">
+    <!-- 戻るボタン -->
+    <button id="backButton" class="back-button">
       <i class="fas fa-arrow-left"></i>
       元のページに戻る
     </button>
