--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- フレームバスティング：iframeでの表示を防ぐ -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="frame-ancestors 'none';"
+    />
     <title>片桐徹人 - 自己紹介</title>
     <link rel="stylesheet" href="styles.css" />
     <link
