--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
             <div class="social-links">
               <a
                 href="https://x.com/Azamiushi"
-                target="_blank"
+                target="_top"
                 class="social-link"
               >
                 <i class="fab fa-twitter"></i>
               </a>
               <a
                 href="https://www.linkedin.com/in/徹人-片桐-9ab055322"
-                target="_blank"
+                target="_top"
                 class="social-link"
               >
                 <i class="fab fa-linkedin"></i>
               </a>
               <a
                 href="https://note.com/katagiri_tetsuto"
-                target="_blank"
+                target="_top"
                 class="social-link"
               >
                 <i class="fas fa-edit"></i>
               </a>
               <a
                 href="https://youtube.com/@azamiushi"
-                target="_blank"
+                target="_top"
                 class="social-link"
               >
                 <i class="fab fa-youtube"></i>
@@ -120,7 +120,7 @@
               <p>noteに色々と書いてます。見てね！</p>
               <a
                 href="https://note.com/katagiri_tetsuto"
-                target="_blank"
+                target="_top"
                 class="btn btn-primary"
                 >noteを見る</a
               >
@@ -151,7 +151,7 @@
             <p>理由は下記の記事を見てね！</p>
             <a
               href="https://note.com/katagiri_tetsuto"
-              target="_blank"
+              target="_top"
               class="btn btn-secondary"
               >記事を読む</a
             >
@@ -174,7 +174,7 @@
               <p>Blenderを用いてThe Backroomsを再現しました。</p>
               <a
                 href="https://youtube.com/@azamiushi"
-                target="_blank"
+                target="_top"
                 class="work-video"
               >
                 <i class="fas fa-play-circle"></i>
@@ -191,7 +191,7 @@
               <p>様々な創作活動を行っています。</p>
               <a
                 href="https://youtube.com/@azamiushi"
-                target="_blank"
+                target="_top"
                 class="work-video"
               >
                 <i class="fas fa-play-circle"></i>
