画面遷移追加

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <i class="fas fa-user"></i>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#profile" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
 
     <!-- Profile Section -->
@@ -101,6 +106,11 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#about" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
 
     <!-- About Section -->
@@ -134,9 +144,12 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#belief" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
-
-    <!-- Belief Section -->
     <section id="belief" class="belief">
       <div class="container">
         <h2 class="section-title">Belief</h2>
@@ -158,9 +171,12 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#works" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
-
-    <!-- Works Section -->
     <section id="works" class="works">
       <div class="container">
         <h2 class="section-title">Works</h2>
@@ -201,9 +217,12 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#career" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
-
-    <!-- Career Section -->
     <section id="career" class="career">
       <div class="container">
         <h2 class="section-title">Career</h2>
@@ -264,9 +283,12 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#skills" class="arrow-btn">
+          <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </section>
-
-    <!-- Skills Section -->
     <section id="skills" class="skills">
       <div class="container">
         <h2 class="section-title">Skills</h2>
@@ -328,9 +350,12 @@
           </div>
         </div>
       </div>
+      <div class="scroll-arrow">
+        <a href="#home" class="arrow-btn back-to-top">
+          <i class="fas fa-chevron-up"></i>
+        </a>
+      </div>
     </section>
-
-    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <p>&copy; 2025 片桐徹人. All rights reserved.</p>
