--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                 <i class="fab fa-linkedin"></i>
               </a>
               <a
+                href="https://github.com/katagiri-tetsuto"
+                target="_top"
+                class="social-link"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+              <a
                 href="https://note.com/katagiri_tetsuto"
                 target="_top"
                 class="social-link"
@@ -124,7 +131,7 @@
               エンジニアとしてはクラウド分野の学習をメインにしており、現在はServiceNowを主軸にしています。
             </p>
             <p>
-              また、生き物と創作活動が全般好きで、その他料理、旅、読書、ゲーム、スポーツ（球技以外）など幅広く好きです。
+              また、生き物と創作活動が全般好きで、その他料理、旅、読書、ゲーム、釣り、スポーツ（球技以外）など幅広く好きです。
             </p>
             <div class="note-section">
               <p>noteに色々と書いてます。見てね！</p>
@@ -157,6 +164,10 @@
           <div class="belief-card">
             <h3>モットー</h3>
             <p>変化と学びを積み重ね、好きと面白いに従って行動する</p>
+          </div>
+          <div class="belief-card">
+            <h3>パーパス</h3>
+            <p>「Be Creative」</p>
           </div>
           <div class="belief-card">
             <h3>ロールモデル</h3>
@@ -329,6 +340,12 @@
               <span class="skill-tag">HTML</span>
               <span class="skill-tag">CSS</span>
               <span class="skill-tag">SQL</span>
+            </div>
+          </div>
+          <div class="skill-category">
+            <h3>3D</h3>
+            <div class="skill-tags">
+              <span class="skill-tag">Blender</span>
             </div>
           </div>
         </div>
