--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="nav-container">
         <div class="nav-logo">片桐徹人</div>
         <ul class="nav-menu">
-          <li><a href="#home">トップ</a></li>
-          <li><a href="#profile">基本情報</a></li>
+          <li><a href="#home">Top</a></li>
+          <li><a href="#profile">Info</a></li>
           <li><a href="#about">About me</a></li>
           <li><a href="#belief">Belief</a></li>
           <li><a href="#works">Works</a></li>
@@ -56,7 +56,7 @@
     <!-- Profile Section -->
     <section id="profile" class="profile">
       <div class="container">
-        <h2 class="section-title">基本情報</h2>
+        <h2 class="section-title">Info</h2>
         <div class="profile-content">
           <div class="profile-image">
             <div class="profile-placeholder">
