写真追加と全体画面表示対応

--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -47,9 +47,11 @@
         <h2 class="section-title">Info</h2>
         <div class="profile-content">
           <div class="profile-image">
-            <div class="profile-placeholder">
-              <i class="fas fa-user"></i>
-            </div>
+            <img
+              src="../Photos/顔写真.HEIC"
+              alt="片桐徹人の顔写真"
+              class="profile-photo"
+            />
           </div>
           <div class="profile-info">
             <h3>片桐　徹人</h3>
